[gd_scene load_steps=34 format=3 uid="uid://du27u68ehkvk5"]

[ext_resource type="Shader" path="res://assets/shaders/debug.gdshader" id="1_fc0od"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_lnrel"]
[ext_resource type="PackedScene" uid="uid://dacclfbs43wp8" path="res://scenes/weapon.tscn" id="3_mrnnw"]
[ext_resource type="Script" path="res://scripts/reticle.gd" id="3_yybb1"]
[ext_resource type="Resource" uid="uid://bedn1wwr84xk8" path="res://assets/weapons/crowbar/crowbar_right.tres" id="4_2vylr"]
[ext_resource type="Script" path="res://scripts/debug_panel.gd" id="4_do2i3"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="5_2ygjn"]
[ext_resource type="Script" path="res://scripts/idle_player_state.gd" id="6_p62kq"]
[ext_resource type="Script" path="res://scripts/walking_player_state.gd" id="7_i5ifl"]
[ext_resource type="Script" path="res://scripts/sprinting_player_state.gd" id="8_rnkbq"]
[ext_resource type="Script" path="res://scripts/crouching_player_state.gd" id="9_8sk64"]
[ext_resource type="Script" path="res://scripts/sliding_player_state.gd" id="10_i4ube"]
[ext_resource type="Script" path="res://scripts/jumping_player_state.gd" id="11_v05dj"]
[ext_resource type="AudioStream" uid="uid://dwnwoipuxfx" path="res://assets/audio/footstep.mp3" id="12_n6qdo"]
[ext_resource type="Script" path="res://scripts/falling_player_state.gd" id="13_pnnh7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qe6dd"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6qsj6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xu4rd"]
render_priority = 0
shader = ExtResource("1_fc0od")
shader_parameter/albedo = Color(0.93, 0.3534, 0.36301, 1)
shader_parameter/specular = 0.0
shader_parameter/metallic = 1.0
shader_parameter/roughness = 0.354
shader_parameter/point_size = null

[sub_resource type="Gradient" id="Gradient_q8qjy"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_bc52n"]
noise_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cpjur"]
color_ramp = SubResource("Gradient_q8qjy")
noise = SubResource("FastNoiseLite_bc52n")

[sub_resource type="Animation" id="Animation_52hy3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.5, 0)]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController/Camera3D:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CameraController/Camera3D:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraController/Camera3D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CameraController/Camera3D:fov")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CameraController/Camera3D:rotation:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.0005, 0, 0.0005, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CameraController/Camera3D:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/9/type = "method"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_footstep"
}]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("PlayerAudio/footstep:stream")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_n6qdo")]
}

[sub_resource type="Animation" id="Animation_akgnb"]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0.125, 0)]
}

[sub_resource type="Animation" id="Animation_u2po8"]
resource_name = "jump_end"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.2, 0, 0.1, 0, -0.015, -0.0666667, 0.000347957, 0.2, 0, 0, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.1, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.2, 0, 0.0333333, -0.000152979, -0.025, -0.0666667, -0.00146609, 0.2, 0, 0, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.1, 0.4)
}

[sub_resource type="Animation" id="Animation_ncbq8"]
resource_name = "jump_start"
length = 0.55
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.2, -0.000152979, -0.015, -0.1, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.533333)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.1, -0.000689981, -0.025, -0.1, 0, 0.1, 0.00229292, 0, -0.3, 0.000384023, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.533333)
}

[sub_resource type="Animation" id="Animation_7dx3k"]
resource_name = "slide"
length = 5.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController/Camera3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CameraController/Camera3D:fov")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 4.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [75.0, 84.0, 75.0]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerStateMachine/SlidingPlayerState")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(4.96667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1, 4.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.0, 4.0]
}

[sub_resource type="Animation" id="Animation_no2oa"]
resource_name = "sprint"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.15, -0.25, 0, 0.25, 0, -0.15, -0.25, 0, 0.25, 0, 0, -0.1, -0.0385486, 0.25, 0),
"times": PackedFloat32Array(0, 0.633333, 1.36667, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.266667, 0.0110703, 0.15, -0.3, -0.0106326, 0.266667, -0.0106326, -0.15, -0.266667, 0.0108607, 0.266667, 0.0138143, 0.15, -0.233333, 0.00967934, 0.2, 0.01027, 0, -0.15, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 1, 1.6, 2)
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.966667, 1.53333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"_play_footstep"
}, {
"args": [],
"method": &"_play_footstep"
}, {
"args": [],
"method": &"_play_footstep"
}, {
"args": [],
"method": &"_play_footstep"
}]
}

[sub_resource type="Animation" id="Animation_joqp2"]
resource_name = "walking"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.05, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -0.05, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-0.1, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, -0.1, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, -0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.03333, 1.86667),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"_play_footstep"
}, {
"args": [],
"method": &"_play_footstep"
}, {
"args": [],
"method": &"_play_footstep"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerAudio/footstep:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_n6qdo")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6tjy7"]
_data = {
"RESET": SubResource("Animation_52hy3"),
"crouch": SubResource("Animation_akgnb"),
"jump_end": SubResource("Animation_u2po8"),
"jump_start": SubResource("Animation_ncbq8"),
"slide": SubResource("Animation_7dx3k"),
"sprint": SubResource("Animation_no2oa"),
"walking": SubResource("Animation_joqp2")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_vevdt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ymkqs"]
bg_color = Color(0, 0, 0, 0.301961)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 0.172549)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_3bje1"]
MarginContainer/constants/margin_bottom = 10
MarginContainer/constants/margin_left = 10
MarginContainer/constants/margin_right = 10
MarginContainer/constants/margin_top = 10
PanelContainer/styles/panel = SubResource("StyleBoxFlat_ymkqs")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cr471"]
height = 0.5
radius = 0.525

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_lnrel")
toggle_sprint = false
always_uncrouch_out_of_slide = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qe6dd")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_6qsj6")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_xu4rd")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
current = true

[node name="WeaponRig" type="Node3D" parent="CameraController/Camera3D"]

[node name="Weapon" parent="CameraController/Camera3D/WeaponRig" instance=ExtResource("3_mrnnw")]
transform = Transform3D(0.00347296, -0.0196962, 0, 0.00673648, 0.00118782, 0.0187939, -0.0185083, -0.00326352, 0.0068404, 0.5, -0.75, -0.6)
WEAPON_TYPE = ExtResource("4_2vylr")
sway_noise = SubResource("NoiseTexture2D_cpjur")
sway_speed = null
reset = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6tjy7")
}

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
shape = SubResource("SphereShape3D_vevdt")
target_position = Vector3(0, 0.5, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_yybb1")

[node name="Top" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(0, 15, 0, 5)
width = 2.0

[node name="Left" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="DebugPanel" type="PanelContainer" parent="UI"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = SubResource("Theme_3bje1")
script = ExtResource("4_do2i3")

[node name="MarginContainer" type="MarginContainer" parent="UI/DebugPanel"]
layout_mode = 2

[node name="PropertyContainer" type="VBoxContainer" parent="UI/DebugPanel/MarginContainer"]
layout_mode = 2

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_2ygjn")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_p62kq")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_i5ifl")

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_rnkbq")

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_8sk64")

[node name="SlidingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_i4ube")

[node name="JumpingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_v05dj")

[node name="FallingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("13_pnnh7")

[node name="StairStep" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)
shape = SubResource("CylinderShape3D_cr471")
target_position = Vector3(0, 0, 0)

[node name="BlockStairs" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.277212, 0)
shape = SubResource("CylinderShape3D_cr471")
target_position = Vector3(0, 0, 0)

[node name="PlayerAudio" type="Node3D" parent="."]

[node name="footstep" type="AudioStreamPlayer3D" parent="PlayerAudio"]
stream = ExtResource("12_n6qdo")
volume_db = -10.175
pitch_scale = 1.6
max_distance = 1.0
panning_strength = 0.16
